# renode-infrastructure

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  README.md  README.rst
src/Emulator/Cores/: CMakeLists.txt  cores-arm-m.csproj  cores-arm-m_NET.csproj  cores-arm.csproj  cores-arm64.csproj  cores-arm64_NET.csproj  cores-arm_NET.csproj  cores-i386.csproj  cores-i386_NET.csproj  cores-ppc.csproj  cores-ppc64.csproj  cores-ppc64_NET.csproj  cores-ppc_NET.csproj  cores-riscv.csproj  cores-riscv64.csproj  cores-riscv64_NET.csproj  cores-riscv_NET.csproj  cores-sparc.csproj  cores-sparc_NET.csproj  cores-x86_64.csproj  cores-x86_64_NET.csproj  cores-xtensa.csproj  cores-xtensa_NET.csproj  cores.template.csproj  cores.template_NET.csproj  linux-properties.csproj  linux-properties_NET.csproj  osx-properties.csproj  osx-properties_NET.csproj  softfloat-3.cproj  softfloat-3_NET.cproj  softfloat.cproj  softfloat_NET.cproj  tcg.cproj  tcg_NET.cproj  translate.cproj  translate_NET.cproj  windows-properties.csproj  windows-properties_NET.csproj
src/Emulator/Cores/Arm/: ARMCommon.cs  ARM_GenericInterruptController.cs  ARMv7A.cs  ARMv7R.cs  Arm.cs  ArmPerformanceMonitoringUnit.cs  ArmRegisters.cs  ArmRegisters.tt  ArmSignalsUnit.cs  ArmSnoopControlUnit.cs  CortexA7.cs  GIC.cs  SemihostingHandler.cs  SnoopControlUnit.cs  TCMConfiguration.cs
src/Emulator/Cores/Arm-M/: CortexM.cs  CortexMImplementationDefinedAttributionUnit.cs  CortexMRegisters.cs  CortexMRegisters.tt  DWT.cs  NVIC.cs
src/Emulator/Cores/Arm/ARM_GenericInterruptController/: ArmGicRedistributorRegistration.cs  Utils.cs
src/Emulator/Cores/Arm/Timers/: ARM_GenericTimer.cs  ARM_GlobalTimer.cs  ARM_PrivateTimer.cs  CortexAGenericTimer.cs  CortexAGlobalTimer.cs  CortexAPrivateTimer.cs
src/Emulator/Cores/Arm64/: ARMv8A.cs  ARMv8ARegisters.cs  ARMv8ARegisters.tt  ARMv8R.cs  ARMv8RRegisters.cs  ARMv8RRegisters.tt  BaseARMv8.cs
src/Emulator/Cores/Common/: RegisterEnumParser.cs  RegisterEnumParser.tt  RegisterEnumParserContent.tt  RegisterTemplate.tt  RegisterTemplateDefinitions.tt
src/Emulator/Cores/Debug/: CPUTracer.cs  FunctionCallParameter.cs  FunctionCallParameterType.cs
src/Emulator/Cores/KVM/: KVMCPU.cs
src/Emulator/Cores/KVM/X86/: X86KVM.cs  X86KVMBase.cs  X86KVMRegisters.cs  X86KVMRegisters.tt  X86_64KVM.cs  X86_64KVMRegisters.cs
src/Emulator/Cores/PowerPC/: PowerPc.cs  PowerPc64.cs  PowerPc64Registers.cs  PowerPc64Registers.tt  PowerPcRegisters.cs  PowerPcRegisters.tt
src/Emulator/Cores/RiscV/: AndesNCEPLIC100.cs  Andes_A45.cs  Andes_AndeStarV5Extension.cs  BaseRiscV.cs  CSRValidationLevel.cs  CV32E40P.cs  CoralNPU.cs  CoreLevelInterruptor.cs  CoreLocalInterruptController.cs  ExternalPMPBase.cs  IbexRiscV32.cs  MiV_CoreLevelInterruptor.cs  Minerva.cs  NonstandardCSR.cs  OpenTitan_BigNumberAcceleratorCore.cs  OpenTitan_PlatformLevelInterruptController.cs  PULP_EventController.cs  PULP_InterruptController.cs  PicoRV32.cs  PlatformLevelInterruptController.cs  PrivilegeLevel.cs  RegisterDescription.cs  Ri5cy.cs  RiscV.cs  RiscV32.cs  RiscV32Registers.cs  RiscV32Registers.tt  RiscV64.cs  RiscV64Registers.cs  RiscV64Registers.tt  RiscVCpuHooksExtensions.cs  RiscVCsrPythonEngine.cs  RiscVExternalPMP.cs  RiscVInstructionPythonEngine.cs  RiscVLLVMModelEncoder.cs  RiscVRegisters.cs  RiscVRegisters.tt  RiscVStackAccessPythonEngine.cs  RiscvOpcodesParser.cs  SimpleCSR.cs  (+4 more)
src/Emulator/Cores/RiscV/PLIC/: IPlatformLevelInterruptController.cs  IrqContext.cs  IrqSource.cs  IrqTarget.cs  PlatformLevelInterruptControllerBase.cs
src/Emulator/Cores/RiscV/opcodes/: README
src/Emulator/Cores/Sparc/: Sparc.cs  SparcRegisters.cs  SparcRegisters.tt
src/Emulator/Cores/X86/: APICMessageHelper.cs  BaseX86.cs  IOAPIC.cs  LAPIC.cs  X86.cs  X86Registers.cs  X86Registers.tt  X86_64.cs  X86_64GDBFields.cs  X86_64Registers.cs  X86_64Registers.tt
src/Emulator/Cores/X86/ACPI/: ACPIExtensions.cs  DifferentiatedSystemDescriptionTable.cs  FixedACPIDescriptionTable.cs  MultipleAPICDescriptionTable.cs  ProcessorLocalAPICRecord.cs  RootSystemDescriptionPointer.cs  RootSystemDescriptionTable.cs  SystemDescriptionTableHeader.cs
src/Emulator/Cores/X86KVM/: X86KVM.cs  X86KVMRegisters.cs  X86KVMRegisters.tt
src/Emulator/Cores/X86KVM/X86KVM/: X86KVM.cs  X86KVMRegisters.cs  X86KVMRegisters.tt
src/Emulator/Cores/X86KVM/X86KVM_Base/: X86KVMBase.cs
src/Emulator/Cores/X86KVM/X86_64KVM/: X86_64KVMRegisters.cs  X86_64KVMRegisters.tt
src/Emulator/Cores/Xtensa/: Xtensa.cs  XtensaRegisters.cs  XtensaRegisters.tt
src/Emulator/Cores/i386KVM/X86KVM/: X86KVM.cs  X86KVMRegisters.cs
src/Emulator/Cores/i386KVM/X86KVM_Base/: X86KVMBase.cs
src/Emulator/Cores/i386KVM/X86_64KVM/: X86_64KVM.cs
src/Emulator/Cores/renode/: renode_callbacks.c  renode_memory.c
src/Emulator/Cores/renode/include/: map.h  renode_imports.h  renode_imports_generated.h
src/Emulator/Cores/renode/virt/: renode_callbacks.c
src/Emulator/Cores/virt/: .clang-format  CMakeLists.txt  README.md
src/Emulator/Cores/virt/include/: callbacks.h  cpu.h  cpu_registers.h  debug.h  memory_range.h  registers.h  unwind.h  utils.h  x86_reports.h
src/Emulator/Cores/virt/src/: callbacks.c  cpu_registers.c  debug.c  kvm_cpu.c  memory_range.c  (+3 more)
(+2214 files in other folders)
